--- a/.gitignore
+++ b/.gitignore
@@ -4,34 +4,59 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
+*.test.js
+*.test.ts
+*.test.tsx
 
 # next.js
 /.next/
 /out/
+.next/
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+*.log
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # local env files
 .env*.local
 .env
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
+# netlify
+.netlify
+.netlify/
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# OS files
+Thumbs.db
+.DS_Store
 
